# single_header

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  action.yml
.github/workflows/: ci.yml  release.yml
src/: amalgamator.cpp  amalgamator.hpp  cli.cpp  cli.hpp  config.cpp  config.hpp  helpers.cpp  helpers.hpp  main.cpp
tests/: test_cli.cpp
tests/fixtures/compile_smoke/include/smoke/: api.cpp  api.hpp  detail.hpp
tests/fixtures/csv_style/include/csv/: csv.hpp
tests/fixtures/csv_style/include/csv/internal/: common.hpp  row.cpp  row.hpp
tests/fixtures/simple/include/simple/: api.cpp  api.hpp  detail.hpp
